# pg-sync-roles

./: README.md  pg_sync_roles.py  pyproject.toml  start-services.sh  stop-services.sh  test_pg_sync_roles.py
.github/workflows/: test.yaml
